# chip8

./: .gitignore  CMakeLists.txt  CMakePresets.json  chip.cpp  chip8.cpp  chip8.h  chip8_font.h  game.cpp  game.h  main.cpp  readme.md  references.txt
c/: chip8.c
cpp/: chip8.cpp  chip8.h  game.h
